@@ -402,6 +402,7 @@ KlemGUI.Raster.label=Raster
 KlemGUI.ClassAlgo.label=Classifier
 KlemGUI.ClassAlgo.Algo.Auto=Auto
 RasterHistogram.PlugInName.label=Raster histogram
+RasterHistogram.PlugInName.label=Calculating raster histogram...
 HydrographKlemPlugin.ChecParamA.message=Please, check the IFD a parameter (30-120).
 HydrographKlemPlugin.ChecParamN.message=Please, check the IFD n param (0-1).
 KlemGUI.ClassAlgo.Algo.UniqueVals=Unique values
