@@ -402,6 +402,7 @@ KlemGUI.Raster.label=Raster
 KlemGUI.ClassAlgo.label=Classificatore
 KlemGUI.ClassAlgo.Algo.Auto=Auto
 RasterHistogram.PlugInName.label=Istogramma raster
+RasterHistogram.PlugInName.label=Calculating raster histogram...
 HydrographKlemPlugin.ChecParamA.message=Verificare il parametro a delle LSPP.
 HydrographKlemPlugin.ChecParamN.message=Please, check the IFD n param (0-1).
 KlemGUI.ClassAlgo.Algo.UniqueVals=Valori unici
